# proc_imagen_mj

./: CMakeLists.txt  package.xml
include/proc_imagen_mj/: tracking_node.h
scripts/: peopledetect.py
src/: nodo_hsv_tuner_2d.cpp  tracking_node.cpp
